2013-11-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 31977: Src/module.c: no error if autoloading a feature that
	is already loaded in a consistent fashion.

	* Jun T.: 31971: locale fix for helpfiles.

	* Martin Vaeth: 31959: .gitignore, Doc/help/.cvsignore,
	Doc/help/.distfiles: missed files.

2013-11-12  Bart Schaefer  <schaefer@zsh.org>

	* 31966: Util/helpfiles: skip introductory paragraphs processing
	"man zshbuiltins" by assuming that all real command names start
	with a lower case letter.  Check "ztcp" file as a guess that all
	builtins were processed.

2013-11-12  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Martin Vaeth: 31959: .gitignore,
	Completion/Zsh/Command/_run-help, Doc/.cvsignore,
	Doc/.distfiles, Doc/Makefile.in, Makefile.in,
	StartupFiles/zshrc, Util/helpfiles, configure.ac: make help
	files during installation.

	* 31961: Src/Zle/zle.h, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c: rationalise fd watch to use structures.

2013-11-08  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: fix ChangeLog to say 5.0.3 instead of 4.0.3.

	* unposted: NEWS: refer to zle -Fw.

	* 31940: Doc/Zsh/contrib.yo, Functions/Misc/zcalc: add -e option
	to zcalc to use input from arguments to command.

2013-11-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 31937: Doc/Zsh/zle.yo, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c, Src/Zle/zle_utils.c, Src/math.c,
	Test/C01arith.ztst: zle -Fw uses widget semantics for
	file descriptor handler.

2013-11-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Completion/Debian/Command/.distfiles,
	Completion/Unix/Type/.distfiles, Config/version.mk, Etc/FAQ.yo,
	README, Src/pattern.c, Src/signals.c, Test/.distfiles: updates
	for 5.0.2-test-1 in preparation for 5.0.3.  Updated files
	in .distfiles and add mod_export declarations.

2013-11-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stefan Neudorf: 31936: Doc/Zsh/builtins.yo,